tests/integrations/basic-fail/tests/actual_tests_bless_yolo/rustfix-multiple-fail.stderr
error[E0106]: missing lifetime specifier
 --> tests/actual_tests_bless_yolo/rustfix-multiple-fail.rs:1:21
  |
1 | pub fn f(_: i32) -> &i32 {
  |                     ^ expected named lifetime parameter
  |
  = help: this function's return type contains a borrowed value, but there is no value for it to be borrowed from
help: consider using the `'static` lifetime, but this is uncommon unless you're returning a borrowed value from a `const` or a `static`
  |
1 | pub fn f(_: i32) -> &'static i32 {
  |                      +++++++
help: instead, you are more likely to want to change the argument to be borrowed...
  |
1 | pub fn f(_: &i32) -> &i32 {
  |             +
help: ...or alternatively, you might want to return an owned value
  |
1 - pub fn f(_: i32) -> &i32 {
1 + pub fn f(_: i32) -> i32 {
  |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0106`.
